--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
       <div class="wrapper">
         <div class="btn-container">
-          <button id="btn">Show Users</button>
+          <button onclick="fetchData()" id="btn">Show Users</button>
         </div>
         <div class="output-cointainer">
           <h1>Github Users</h1>
